--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/heart.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+    <link rel="manifest" href="https://progressier.app/AfsidfzBcPzUiMBnyIU2/progressier.json"/>
+    <script defer src="https://progressier.app/AfsidfzBcPzUiMBnyIU2/script.js"></script> 
     <title>TinyNotie</title>
   </head>
   <body>
