--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logoicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/logoiconfavi.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <link rel="manifest" href="https://progressier.app/AfsidfzBcPzUiMBnyIU2/progressier.json"/>
     <script defer src="https://progressier.app/AfsidfzBcPzUiMBnyIU2/script.js"></script> 
