--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/heart.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/manifest_dev.json" />
     <title>TinyNotie</title>
   </head>
   <body>
